[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Telmo \"Trooper\" <telmo.trooper@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.1.1"
chrono = "0.4.19"
config = "0.10.1"
serde = "1.0.118"
sqlx = { version = "0.4.2", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "0.8.1", features = ["v4"] }

[dev-dependencies]
reqwest = "0.10.10"
tokio = "0.2.22"
